@@ -1,5 +1,5 @@
 lib_LTLIBRARIES=libgtkspell.la
-CFLAGS=@GTKSPELL_CFLAGS@ -DG_LOG_DOMAIN=\"gtkspell\"
+AM_CFLAGS=@GTKSPELL_CFLAGS@ -DG_LOG_DOMAIN=\"gtkspell\"
 libgtkspell_la_LIBADD=@GTKSPELL_LIBS@ @SPELLER_LIB@
 libgtkspell_la_includedir=$(includedir)/gtkspell-2.0/gtkspell
 libgtkspell_la_include_HEADERS=gtkspell.h
